DIAC-2517 - upgrade es to v9