@@ -68,7 +68,7 @@ public class DMSystemDocumentManagementUploader {
                 uploadResponse
                     .getEmbedded()
                     .getDocuments()
-                    .get(0);
+                    .getFirst();
 
             return new Document(
                 uploadedDocument
