@@ -188,33 +188,33 @@ public class FtpaDisplayService {
     public void mapFtpaDecision(boolean isMigration, AsylumCase asylumCase, String ftpaApplicantType, FtpaApplications ftpaApplication) {
 
         ftpaApplication.setIsFtpaNoticeOfDecisionSetAside(asylumCase
-                .read(valueOf(String.format("IS_FTPA_%s_NOTICE_OF_DECISION_SET_ASIDE", ftpaApplicantType)), YesOrNo.class)
+                .read(valueOf("IS_FTPA_%s_NOTICE_OF_DECISION_SET_ASIDE".formatted(ftpaApplicantType)), YesOrNo.class)
                 .orElse(YesOrNo.NO));
 
         String ftpaDecisionOutcomeType = asylumCase.read(
-                        valueOf(String.format("FTPA_%s_RJ_DECISION_OUTCOME_TYPE", ftpaApplicantType)), String.class)
+                        valueOf("FTPA_%s_RJ_DECISION_OUTCOME_TYPE".formatted(ftpaApplicantType)), String.class)
                 .orElseThrow(() -> new IllegalStateException("ftpaDecisionOutcomeType is not present"));
         ftpaApplication.setFtpaDecisionOutcomeType(ftpaDecisionOutcomeType);
         addFtpaDecisionAndReasons(isMigration, asylumCase, ftpaApplicantType, ftpaApplication);
 
         final Optional<List<IdValue<DocumentWithDescription>>> maybeFtpaDecisionNoticeDocument = asylumCase.read(
-                valueOf(String.format("FTPA_%s_NOTICE_DOCUMENT", ftpaApplicantType)));
+                valueOf("FTPA_%s_NOTICE_DOCUMENT".formatted(ftpaApplicantType)));
         final Optional<FtpaDecisionCheckValues<String>> maybeDecisionNotesPoints =
-                asylumCase.read(valueOf(String.format("FTPA_%s_RJ_DECISION_NOTES_POINTS", ftpaApplicantType)));
+                asylumCase.read(valueOf("FTPA_%s_RJ_DECISION_NOTES_POINTS".formatted(ftpaApplicantType)));
 
         maybeFtpaDecisionNoticeDocument.ifPresent(ftpaApplication::setFtpaNoticeDocument);
         maybeDecisionNotesPoints.ifPresent(ftpaApplication::setFtpaDecisionNotesPoints);
 
-        asylumCase.read(valueOf(String.format("FTPA_%s_DECISION_OBJECTIONS", ftpaApplicantType)), String.class)
+        asylumCase.read(valueOf("FTPA_%s_DECISION_OBJECTIONS".formatted(ftpaApplicantType)), String.class)
                 .ifPresent(ftpaApplication::setFtpaDecisionObjections);
-        asylumCase.read(valueOf(String.format("FTPA_%s_RJ_DECISION_NOTES_DESCRIPTION", ftpaApplicantType)), String.class)
+        asylumCase.read(valueOf("FTPA_%s_RJ_DECISION_NOTES_DESCRIPTION".formatted(ftpaApplicantType)), String.class)
                 .ifPresent(ftpaApplication::setFtpaDecisionNotesDescription);
-        asylumCase.read(valueOf(String.format("FTPA_%s_DECISION_DATE", ftpaApplicantType)), String.class)
+        asylumCase.read(valueOf("FTPA_%s_DECISION_DATE".formatted(ftpaApplicantType)), String.class)
                 .ifPresent(ftpaApplication::setFtpaDecisionDate);
 
         if (!isMigration) {
             if (ftpaDecisionOutcomeType.equals("remadeRule31") || ftpaDecisionOutcomeType.equals("remadeRule32")) {
-                asylumCase.read(valueOf(String.format("FTPA_%s_DECISION_REMADE_RULE_32_TEXT", ftpaApplicantType)),
+                asylumCase.read(valueOf("FTPA_%s_DECISION_REMADE_RULE_32_TEXT".formatted(ftpaApplicantType)),
                                 String.class)
                         .ifPresent(ftpaApplication::setFtpaDecisionRemadeRule32Text);
             }
@@ -223,10 +223,10 @@ public class FtpaDisplayService {
             }
         } else {
             if (ftpaDecisionOutcomeType.equals("remadeRule32")) {
-                asylumCase.read(valueOf(String.format("FTPA_%s_DECISION_REMADE_RULE_32", ftpaApplicantType)), String.class)
+                asylumCase.read(valueOf("FTPA_%s_DECISION_REMADE_RULE_32".formatted(ftpaApplicantType)), String.class)
                         .ifPresent(ftpaApplication::setFtpaDecisionRemadeRule32);
             }
-            asylumCase.read(valueOf(String.format("FTPA_%s_DECISION_LST_INS", ftpaApplicantType)), String.class)
+            asylumCase.read(valueOf("FTPA_%s_DECISION_LST_INS".formatted(ftpaApplicantType)), String.class)
                     .ifPresent(ftpaApplication::setFtpaDecisionLstIns);
         }
 
@@ -235,20 +235,20 @@ public class FtpaDisplayService {
     private void addRule35Data(AsylumCase asylumCase, String ftpaApplicantType, FtpaApplications ftpaApplication) {
         final Document rule35NoticeDocument =
                 asylumCase.read(
-                        valueOf(String.format("FTPA_R35_%s_DOCUMENT", ftpaApplicantType)), Document.class)
+                        valueOf("FTPA_R35_%s_DOCUMENT".formatted(ftpaApplicantType)), Document.class)
                         .orElse(null);
 
         final Optional<List<IdValue<DocumentWithDescription>>> maybeFtpaR35DecisionNoticeDocument =
-                asylumCase.read(valueOf(String.format("FTPA_%s_R35_NOTICE_DOCUMENT", ftpaApplicantType)));
+                asylumCase.read(valueOf("FTPA_%s_R35_NOTICE_DOCUMENT".formatted(ftpaApplicantType)));
 
         maybeFtpaR35DecisionNoticeDocument.ifPresent(ftpaApplication::setFtpaNoticeDocument);
         ftpaApplication.setFtpaR35Document(rule35NoticeDocument);
         ftpaApplication.setFtpaDecisionOutcomeTypeR35("Review decision under rule 35");
         ftpaApplication.setFtpaDecisionOutcomeType(null);
         ftpaApplication.setIsFtpaNoticeOfDecisionSetAside(null);
-        asylumCase.read(valueOf(String.format("FTPA_%s_R35_LISTING_ADDITIONAL_INS", ftpaApplicantType)), String.class)
+        asylumCase.read(valueOf("FTPA_%s_R35_LISTING_ADDITIONAL_INS".formatted(ftpaApplicantType)), String.class)
                 .ifPresent(ftpaApplication::setFtpaDecisionLstIns);
-        asylumCase.read(valueOf(String.format("FTPA_%s_R35_DECISION_OBJECTIONS", ftpaApplicantType)), String.class)
+        asylumCase.read(valueOf("FTPA_%s_R35_DECISION_OBJECTIONS".formatted(ftpaApplicantType)), String.class)
                 .ifPresent(ftpaApplication::setFtpaDecisionObjections);
     }
 
@@ -257,12 +257,12 @@ public class FtpaDisplayService {
 
         if (isMigration) {
             final Optional<List<IdValue<DocumentWithDescription>>> maybeFtpaDecisionAndReasonsDocument = asylumCase.read(
-                    valueOf(String.format("FTPA_%s_DECISION_DOCUMENT", ftpaApplicantType)));
+                    valueOf("FTPA_%s_DECISION_DOCUMENT".formatted(ftpaApplicantType)));
             maybeFtpaDecisionAndReasonsDocument.ifPresent(ftpaApplication::setFtpaLegacyDecisionDocument);
         } else {
             final Document ftpaDecisionDocument =
                     asylumCase.read(
-                            valueOf(String.format("FTPA_APPLICATION_%s_DOCUMENT", ftpaApplicantType)), Document.class)
+                            valueOf("FTPA_APPLICATION_%s_DOCUMENT".formatted(ftpaApplicantType)), Document.class)
                             .orElse(null);
 
             ftpaApplication.setFtpaNewDecisionDocument(ftpaDecisionDocument);
