@@ -158,7 +158,7 @@ class AutoLegalRepresentativeReviewDirectionHandlerTest {
         List<IdValue<Direction>> actualExistingDirections =
             existingDirectionsCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(0, actualExistingDirections.size());
 
