@@ -251,7 +251,7 @@ class DirectionHandlerTest {
         List<IdValue<Direction>> actualExistingDirections =
                 existingDirectionsCaptor
                         .getAllValues()
-                        .get(0);
+                        .getFirst();
 
         assertEquals(0, actualExistingDirections.size());
         verifyCaseAfterHandling(event, allDirections);
@@ -312,7 +312,7 @@ class DirectionHandlerTest {
         List<IdValue<Direction>> actualExistingDirections =
                 existingDirectionsCaptor
                         .getAllValues()
-                        .get(0);
+                        .getFirst();
         assertEquals(0, actualExistingDirections.size());
 
         verifyCaseAfterHandling(event, allDirections);
