@@ -581,8 +581,8 @@ class HomeOfficeDecisionDateCheckerTest {
         List<AsylumCaseFieldDefinition> keys = asylumExtractor.getAllValues();
         List<YesOrNo> values = valueCaptor.getAllValues();
 
-        assertThat(keys.get(0)).isEqualTo(SUBMISSION_OUT_OF_TIME);
-        assertThat(values.get(0)).isEqualTo(NO);
+        assertThat(keys.getFirst()).isEqualTo(SUBMISSION_OUT_OF_TIME);
+        assertThat(values.getFirst()).isEqualTo(NO);
     }
 
     @Test
@@ -603,8 +603,8 @@ class HomeOfficeDecisionDateCheckerTest {
         List<AsylumCaseFieldDefinition> keys = asylumExtractor.getAllValues();
         List<YesOrNo> values = valueCaptor.getAllValues();
 
-        assertThat(keys.get(0)).isEqualTo(SUBMISSION_OUT_OF_TIME);
-        assertThat(values.get(0)).isEqualTo(YES);
+        assertThat(keys.getFirst()).isEqualTo(SUBMISSION_OUT_OF_TIME);
+        assertThat(values.getFirst()).isEqualTo(YES);
 
         assertThat(keys.get(1)).isEqualTo(RECORDED_OUT_OF_TIME_DECISION);
         assertThat(values.get(1)).isEqualTo(NO);
@@ -628,8 +628,8 @@ class HomeOfficeDecisionDateCheckerTest {
         List<AsylumCaseFieldDefinition> keys = asylumExtractor.getAllValues();
         List<YesOrNo> values = valueCaptor.getAllValues();
 
-        assertThat(keys.get(0)).isEqualTo(SUBMISSION_OUT_OF_TIME);
-        assertThat(values.get(0)).isEqualTo(YES);
+        assertThat(keys.getFirst()).isEqualTo(SUBMISSION_OUT_OF_TIME);
+        assertThat(values.getFirst()).isEqualTo(YES);
 
         assertThat(keys.get(1)).isEqualTo(RECORDED_OUT_OF_TIME_DECISION);
         assertThat(values.get(1)).isEqualTo(NO);
@@ -651,8 +651,8 @@ class HomeOfficeDecisionDateCheckerTest {
         List<AsylumCaseFieldDefinition> keys = asylumExtractor.getAllValues();
         List<YesOrNo> values = valueCaptor.getAllValues();
 
-        assertThat(keys.get(0)).isEqualTo(SUBMISSION_OUT_OF_TIME);
-        assertThat(values.get(0)).isEqualTo(YES);
+        assertThat(keys.getFirst()).isEqualTo(SUBMISSION_OUT_OF_TIME);
+        assertThat(values.getFirst()).isEqualTo(YES);
 
         assertThat(keys.get(1)).isEqualTo(RECORDED_OUT_OF_TIME_DECISION);
         assertThat(values.get(1)).isEqualTo(NO);
@@ -674,8 +674,8 @@ class HomeOfficeDecisionDateCheckerTest {
         List<AsylumCaseFieldDefinition> keys = asylumExtractor.getAllValues();
         List<YesOrNo> values = valueCaptor.getAllValues();
 
-        assertThat(keys.get(0)).isEqualTo(SUBMISSION_OUT_OF_TIME);
-        assertThat(values.get(0)).isEqualTo(YES);
+        assertThat(keys.getFirst()).isEqualTo(SUBMISSION_OUT_OF_TIME);
+        assertThat(values.getFirst()).isEqualTo(YES);
 
         assertThat(keys.get(1)).isEqualTo(RECORDED_OUT_OF_TIME_DECISION);
         assertThat(values.get(1)).isEqualTo(NO);
@@ -701,8 +701,8 @@ class HomeOfficeDecisionDateCheckerTest {
         List<AsylumCaseFieldDefinition> keys = asylumExtractor.getAllValues();
         List<YesOrNo> values = valueCaptor.getAllValues();
 
-        assertThat(keys.get(0)).isEqualTo(SUBMISSION_OUT_OF_TIME);
-        assertThat(values.get(0)).isEqualTo(NO);
+        assertThat(keys.getFirst()).isEqualTo(SUBMISSION_OUT_OF_TIME);
+        assertThat(values.getFirst()).isEqualTo(NO);
     }
 
     @Test
@@ -724,8 +724,8 @@ class HomeOfficeDecisionDateCheckerTest {
         List<AsylumCaseFieldDefinition> keys = asylumExtractor.getAllValues();
         List<YesOrNo> values = valueCaptor.getAllValues();
 
-        assertThat(keys.get(0)).isEqualTo(SUBMISSION_OUT_OF_TIME);
-        assertThat(values.get(0)).isEqualTo(YES);
+        assertThat(keys.getFirst()).isEqualTo(SUBMISSION_OUT_OF_TIME);
+        assertThat(values.getFirst()).isEqualTo(YES);
 
         assertThat(keys.get(1)).isEqualTo(RECORDED_OUT_OF_TIME_DECISION);
         assertThat(values.get(1)).isEqualTo(NO);
@@ -749,8 +749,8 @@ class HomeOfficeDecisionDateCheckerTest {
         List<AsylumCaseFieldDefinition> keys = asylumExtractor.getAllValues();
         List<YesOrNo> values = valueCaptor.getAllValues();
 
-        assertThat(keys.get(0)).isEqualTo(SUBMISSION_OUT_OF_TIME);
-        assertThat(values.get(0)).isEqualTo(YES);
+        assertThat(keys.getFirst()).isEqualTo(SUBMISSION_OUT_OF_TIME);
+        assertThat(values.getFirst()).isEqualTo(YES);
 
         assertThat(keys.get(1)).isEqualTo(RECORDED_OUT_OF_TIME_DECISION);
         assertThat(values.get(1)).isEqualTo(NO);
