@@ -190,7 +190,7 @@ class RequestHearingRequirementsDirectionTest {
         List<IdValue<Direction>> actualExistingDirections =
             existingDirectionsCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(0, actualExistingDirections.size());
 
