@@ -181,7 +181,7 @@ class UploadAddendumEvidenceHandlerTest {
         List<IdValue<DocumentWithMetadata>> actualExistingAdditionalDocuments =
             existingAdditionalEvidenceDocumentsCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(0, actualExistingAdditionalDocuments.size());
 
