@@ -229,7 +229,7 @@ class UploadHomeOfficeAppealResponseHandlerTest {
         List<IdValue<DocumentWithMetadata>> respondentDocuments =
             respondentDocumentsCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(0, respondentDocuments.size());
 
