@@ -90,7 +90,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(CHANGE_DECISION_TYPE.name(), CHANGE_DECISION_TYPE.toString()));
 
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -118,7 +118,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(APPLICATION_UNDER_RULE_31_OR_RULE_32.name(), APPLICATION_UNDER_RULE_31_OR_RULE_32.toString()),
             new Value(OTHER.name(), OTHER.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -168,7 +168,7 @@ class MakeAnApplicationTypesProviderTest {
         }
 
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -217,7 +217,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(CHANGE_DECISION_TYPE.name(), CHANGE_DECISION_TYPE.toString()));
 
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -257,7 +257,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(OTHER.name(), OTHER.toString()));
 
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -325,7 +325,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(JUDGE_REVIEW_LO.name(), JUDGE_REVIEW_LO.toString()),
             new Value(OTHER.name(), OTHER.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -360,7 +360,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(CHANGE_DECISION_TYPE.name(), CHANGE_DECISION_TYPE.toString()));
 
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -395,7 +395,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(OTHER.name(), OTHER.toString()),
             new Value(CHANGE_DECISION_TYPE.name(), CHANGE_DECISION_TYPE.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -417,7 +417,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(JUDGE_REVIEW_LO.name(), JUDGE_REVIEW_LO.toString()),
             new Value(REINSTATE.name(), REINSTATE.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -449,7 +449,7 @@ class MakeAnApplicationTypesProviderTest {
                 TRANSFER_OUT_OF_ACCELERATED_DETAINED_APPEALS_PROCESS.toString()),
             new Value(OTHER.name(), OTHER.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -476,7 +476,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(LINK_OR_UNLINK.name(), LINK_OR_UNLINK.toString()),
             new Value(CHANGE_DECISION_TYPE.name(), CHANGE_DECISION_TYPE.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -507,7 +507,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(LINK_OR_UNLINK.name(), LINK_OR_UNLINK.toString()),
             new Value(CHANGE_DECISION_TYPE.name(), CHANGE_DECISION_TYPE.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -538,7 +538,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(LINK_OR_UNLINK.name(), LINK_OR_UNLINK.toString()),
             new Value(CHANGE_DECISION_TYPE.name(), CHANGE_DECISION_TYPE.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -562,7 +562,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(UPDATE_APPEAL_DETAILS.name(),
                 UPDATE_APPEAL_DETAILS.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -594,7 +594,7 @@ class MakeAnApplicationTypesProviderTest {
                 UPDATE_HEARING_REQUIREMENTS.toString()));
         }
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -620,7 +620,7 @@ class MakeAnApplicationTypesProviderTest {
         Collections.addAll(values,
             new Value(TRANSFER.name(), TRANSFER.toString()));
         DynamicList actualList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList expectedList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(expectedList);
@@ -645,7 +645,7 @@ class MakeAnApplicationTypesProviderTest {
         Collections.addAll(values,
             new Value(TRANSFER.name(), TRANSFER.toString()));
         DynamicList actualList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList expectedList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(expectedList);
@@ -672,7 +672,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(EXPEDITE.name(), EXPEDITE.toString())
         );
         DynamicList actualList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList expectedList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(expectedList);
@@ -708,7 +708,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(EXPEDITE.name(), EXPEDITE.toString())
         );
         DynamicList actualList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList expectedList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(expectedList);
@@ -725,7 +725,7 @@ class MakeAnApplicationTypesProviderTest {
         assertNotNull(actualList);
 
         List<Value> values = actualList.getListItems();
-        assertThatThrownBy(() -> values.get(0))
+        assertThatThrownBy(() -> values.getFirst())
             .isExactlyInstanceOf(NullPointerException.class);
     }
 
@@ -749,7 +749,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(LINK_OR_UNLINK.name(), LINK_OR_UNLINK.toString()),
             new Value(OTHER.name(), OTHER.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -775,7 +775,7 @@ class MakeAnApplicationTypesProviderTest {
             new Value(WITHDRAW.name(), WITHDRAW.toString()),
             new Value(JUDGE_REVIEW.name(), JUDGE_REVIEW.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -801,7 +801,7 @@ class MakeAnApplicationTypesProviderTest {
         Collections.addAll(values,
             new Value(EXPEDITE.name(), EXPEDITE.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
@@ -826,7 +826,7 @@ class MakeAnApplicationTypesProviderTest {
         Collections.addAll(values,
             new Value(EXPEDITE.name(), EXPEDITE.toString()));
         DynamicList expectedList =
-            new DynamicList(values.get(0), values);
+            new DynamicList(values.getFirst(), values);
 
         DynamicList actualList = makeAnApplicationTypesProvider.getMakeAnApplicationTypes(callback);
         assertNotNull(actualList);
