@@ -50,27 +50,29 @@ class AsylumCaseTest {
     @Test
     void reads_document_with_description() throws IOException {
 
-        String caseData = "{\n" +
-            "  \"respondentEvidence\": [\n" +
-            "    {\n" +
-            "      \"id\": \"d019091d-806c-49cf-af64-669fb3d21361\",\n" +
-            "      \"value\": {\n" +
-            "        \"document\": {\n" +
-            "          \"document_url\": \"http://dm-store:8080/documents/7a45c5cb-7b8f-47e0-983b-815b613cdce2\",\n" +
-            "          \"document_filename\": \"test.doc\",\n" +
-            "          \"document_binary_url\": \"http://dm-store:8080/documents/7a45c5cb-7b8f-47e0-983b-815b613cdce2/binary\"\n" +
-            "        },\n" +
-            "        \"description\": \"desc\"\n" +
-            "      }\n" +
-            "    }\n" +
-            "  ]\n" +
-            "}";
+        String caseData = """
+            {
+              "respondentEvidence": [
+                {
+                  "id": "d019091d-806c-49cf-af64-669fb3d21361",
+                  "value": {
+                    "document": {
+                      "document_url": "http://dm-store:8080/documents/7a45c5cb-7b8f-47e0-983b-815b613cdce2",
+                      "document_filename": "test.doc",
+                      "document_binary_url": "http://dm-store:8080/documents/7a45c5cb-7b8f-47e0-983b-815b613cdce2/binary"
+                    },
+                    "description": "desc"
+                  }
+                }
+              ]
+            }\
+            """;
 
         AsylumCase asylumCase = objectMapper.readValue(caseData, AsylumCase.class);
 
         Optional<List<IdValue<DocumentWithDescription>>> maybeRespondentEvidence = asylumCase.read(RESPONDENT_EVIDENCE);
 
-        IdValue<DocumentWithDescription> documentWithDescriptionIdValue = maybeRespondentEvidence.get().get(0);
+        IdValue<DocumentWithDescription> documentWithDescriptionIdValue = maybeRespondentEvidence.get().getFirst();
 
         assertThat(documentWithDescriptionIdValue.getId())
             .isEqualTo("d019091d-806c-49cf-af64-669fb3d21361");
@@ -98,17 +100,19 @@ class AsylumCaseTest {
     @Test
     void reads_address_with_target_type_generics() throws IOException {
 
-        String caseData = "{\n" +
-            "  \"appellantAddress\": {\n" +
-            "    \"AddressLine1\": \"a1\",\n" +
-            "    \"AddressLine2\": \"a2\",\n" +
-            "    \"PostTown\": \"some-post-town\",\n" +
-            "    \"PostCode\": \"some-post-code\",\n" +
-            "    \"County\": \"some-county\",\n" +
-            "    \"AddressLine3\": \"a3\",\n" +
-            "    \"Country\": \"some-country\"\n" +
-            "  }\n" +
-            "}";
+        String caseData = """
+            {
+              "appellantAddress": {
+                "AddressLine1": "a1",
+                "AddressLine2": "a2",
+                "PostTown": "some-post-town",
+                "PostCode": "some-post-code",
+                "County": "some-county",
+                "AddressLine3": "a3",
+                "Country": "some-country"
+              }
+            }\
+            """;
 
         AsylumCase asylumCase = objectMapper.readValue(caseData, AsylumCase.class);
 
@@ -170,47 +174,49 @@ class AsylumCaseTest {
     @Test
     void reads_id_value_list() throws IOException {
 
-        String caseData = "{\"respondentDocuments\": [\n" +
-            "    {\n" +
-            "      \"id\": \"3\",\n" +
-            "      \"value\": {\n" +
-            "        \"tag\": \"appealResponse\",\n" +
-            "        \"document\": {\n" +
-            "          \"document_url\": \"http://dm-store:8080/documents/c3792783-970b-4994-a361-78bd2ec843a1\",\n" +
-            "          \"document_filename\": \"AppealResponse.pdf\",\n" +
-            "          \"document_binary_url\": \"http://dm-store:8080/documents/c3792783-970b-4994-a361-78bd2ec843a1/binary\"\n" +
-            "        },\n" +
-            "        \"description\": \"This is the appeal response\",\n" +
-            "        \"dateUploaded\": \"2019-05-16\"\n" +
-            "      }\n" +
-            "    },\n" +
-            "    {\n" +
-            "      \"id\": \"2\",\n" +
-            "      \"value\": {\n" +
-            "        \"tag\": \"appealResponse\",\n" +
-            "        \"document\": {\n" +
-            "          \"document_url\": \"http://dm-store:8080/documents/ab3acaa1-0b6c-4d9b-843e-1d3d338d550b\",\n" +
-            "          \"document_filename\": \"AppealResponseEvidence.pdf\",\n" +
-            "          \"document_binary_url\": \"http://dm-store:8080/documents/ab3acaa1-0b6c-4d9b-843e-1d3d338d550b/binary\"\n" +
-            "        },\n" +
-            "        \"description\": \"This is the appeal response evidence\",\n" +
-            "        \"dateUploaded\": \"2019-05-16\"\n" +
-            "      }\n" +
-            "    },\n" +
-            "    {\n" +
-            "      \"id\": \"1\",\n" +
-            "      \"value\": {\n" +
-            "        \"tag\": \"respondentEvidence\",\n" +
-            "        \"document\": {\n" +
-            "          \"document_url\": \"http://dm-store:8080/documents/25546e97-d71e-4e85-8141-b954e9aadb75\",\n" +
-            "          \"document_filename\": \"RespondentEvidence.pdf\",\n" +
-            "          \"document_binary_url\": \"http://dm-store:8080/documents/25546e97-d71e-4e85-8141-b954e9aadb75/binary\"\n" +
-            "        },\n" +
-            "        \"description\": \"This is the respondent evidence\",\n" +
-            "        \"dateUploaded\": \"2019-05-16\"\n" +
-            "      }\n" +
-            "    }\n" +
-            "  ]}";
+        String caseData = """
+            {"respondentDocuments": [
+                {
+                  "id": "3",
+                  "value": {
+                    "tag": "appealResponse",
+                    "document": {
+                      "document_url": "http://dm-store:8080/documents/c3792783-970b-4994-a361-78bd2ec843a1",
+                      "document_filename": "AppealResponse.pdf",
+                      "document_binary_url": "http://dm-store:8080/documents/c3792783-970b-4994-a361-78bd2ec843a1/binary"
+                    },
+                    "description": "This is the appeal response",
+                    "dateUploaded": "2019-05-16"
+                  }
+                },
+                {
+                  "id": "2",
+                  "value": {
+                    "tag": "appealResponse",
+                    "document": {
+                      "document_url": "http://dm-store:8080/documents/ab3acaa1-0b6c-4d9b-843e-1d3d338d550b",
+                      "document_filename": "AppealResponseEvidence.pdf",
+                      "document_binary_url": "http://dm-store:8080/documents/ab3acaa1-0b6c-4d9b-843e-1d3d338d550b/binary"
+                    },
+                    "description": "This is the appeal response evidence",
+                    "dateUploaded": "2019-05-16"
+                  }
+                },
+                {
+                  "id": "1",
+                  "value": {
+                    "tag": "respondentEvidence",
+                    "document": {
+                      "document_url": "http://dm-store:8080/documents/25546e97-d71e-4e85-8141-b954e9aadb75",
+                      "document_filename": "RespondentEvidence.pdf",
+                      "document_binary_url": "http://dm-store:8080/documents/25546e97-d71e-4e85-8141-b954e9aadb75/binary"
+                    },
+                    "description": "This is the respondent evidence",
+                    "dateUploaded": "2019-05-16"
+                  }
+                }
+              ]}\
+            """;
 
         AsylumCase asylumCase = objectMapper.readValue(caseData, AsylumCase.class);
 
@@ -218,8 +224,8 @@ class AsylumCaseTest {
 
         List<IdValue<DocumentWithMetadata>> idValues = maybeRespondentDocuments.get();
 
-        assertThat(idValues.get(0).getId()).isEqualTo("3");
-        assertThat(idValues.get(0).getValue()).isInstanceOf(DocumentWithMetadata.class);
+        assertThat(idValues.getFirst().getId()).isEqualTo("3");
+        assertThat(idValues.getFirst().getValue()).isInstanceOf(DocumentWithMetadata.class);
 
         assertThat(idValues.get(1).getId()).isEqualTo("2");
         assertThat(idValues.get(1).getValue()).isInstanceOf(DocumentWithMetadata.class);
@@ -231,11 +237,13 @@ class AsylumCaseTest {
     @Test
     void reads_document() throws IOException {
 
-        String caseData = "{\"caseArgumentDocument\": {\n" +
-            "    \"document_url\": \"http://dm-store:8080/documents/81e61012-52cd-44b3-9570-873c538ecc00\",\n" +
-            "    \"document_filename\": \"CaseArgument.pdf\",\n" +
-            "    \"document_binary_url\": \"http://dm-store:8080/documents/81e61012-52cd-44b3-9570-873c538ecc00/binary\"\n" +
-            "  }}";
+        String caseData = """
+            {"caseArgumentDocument": {
+                "document_url": "http://dm-store:8080/documents/81e61012-52cd-44b3-9570-873c538ecc00",
+                "document_filename": "CaseArgument.pdf",
+                "document_binary_url": "http://dm-store:8080/documents/81e61012-52cd-44b3-9570-873c538ecc00/binary"
+              }}\
+            """;
 
         AsylumCase asylumCase = objectMapper.readValue(caseData, AsylumCase.class);
 
@@ -289,7 +297,7 @@ class AsylumCaseTest {
 
         Optional<List<IdValue<DocumentWithDescription>>> maybeRespondentEvidence = asylumCase.read(RESPONDENT_EVIDENCE);
 
-        IdValue<DocumentWithDescription> documentWithDescriptionIdValue = maybeRespondentEvidence.get().get(0);
+        IdValue<DocumentWithDescription> documentWithDescriptionIdValue = maybeRespondentEvidence.get().getFirst();
 
 
         assertThat(maybeRespondentEvidence.get().size())
